# fpga-cicd-toolchain-demo

./: .envrc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
rtl/: counter.sv
scripts/: setup.sh  setup_tools.sh  setup_verible.sh  setup_verilator.sh
tb/: test_counter.py
